dom functions written

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <h1>IIFE Cats</h1>
 <body>
-	<button class="btn btn-danger">DANGER</button>
+<!-- 	<button class="btn btn-danger">DANGER</button>
+ -->
 
+<div id="fancyPetStore">xx</div>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
