completed class project

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 </head>
 <h1>IIFE Cats</h1>
 <body>
-<!-- 	<button class="btn btn-danger">DANGER</button>
- -->
+	<button class="btn btn-success" id="callan">Callans Kats</button>
+	<button class="btn btn-info" id="zoe">Zoes Kats</button>
+	<button class="btn btn-warning" id="lauren">Laurens Kats</button>
+	<button class="btn btn-danger" id="none">Homeless Kats</button>
+	<button class="btn btn-default" id="all">All Kats</button>
+
+
+
+
 
 <div id="fancyPetStore">xx</div>
 <script
